force-app/main/default/objects/ReportConcern__c/ReportConcern__c.object-meta.xml
<CustomObject>
    <description>This object will store all the Resource concerns</description>
    <label>Report Concern</label>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Report Concern Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Concerns</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>