force-app/main/default/objects/ReportConcern__c/fields/ConcernDetails__c.field-meta.xml
<CustomField>
    <fullName>ConcernDetails__c</fullName>
    <description>Details of the concern report submitted</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Concern Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>