force-app/main/default/objects/ReportConcern__c/fields/ConcernStatus__c.field-meta.xml
<CustomField>
    <fullName>ConcernStatus__c</fullName>
    <description>Status of concern</description>
    <label>Concern Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>