force-app/main/default/objects/ReportConcern__c/fields/ConcernType__c.field-meta.xml
<CustomField>
    <fullName>ConcernType__c</fullName>
    <description>Indicate the type of concern whether it is a concern or change</description>
    <label>Concern Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concern</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>