force-app/main/default/objects/ReportConcern__c/fields/Identity__c.field-meta.xml
<CustomField>
    <fullName>Identity__c</fullName>
    <label>I am a</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Partner</fullName>
            </value>
            <value>
                <fullName>Assister</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Agency User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>