force-app/main/default/objects/ReportConcern__c/fields/LocationID__c.field-meta.xml
<CustomField>
    <fullName>LocationID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location of the resource for which the change is suggested</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Report Concerns</relationshipLabel>
    <relationshipName>LocationID</relationshipName>
    <type>Lookup</type>
</CustomField>