force-app/main/default/objects/ReportConcern__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Organization of the resource for which the change is suggested</description>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report Concerns</relationshipLabel>
    <relationshipName>AccountID</relationshipName>
    <type>Lookup</type>
</CustomField>