force-app/main/default/objects/ReportConcern__c/fields/RemainAnonymous__c.field-meta.xml
<CustomField>
    <fullName>RemainAnonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can be selected if individual filing concern would like to reamin anonymous</description>
    <label>Remain Anonymous?</label>
    <type>Checkbox</type>
</CustomField>