force-app/main/default/objects/ReportConcern__c/fields/ReporterEmail__c.field-meta.xml
<CustomField>
    <fullName>ReporterEmail__c</fullName>
    <description>Email of the user submitting the concern</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Reporter Email</label>
    <type>Email</type>
</CustomField>