force-app/main/default/objects/ReportConcern__c/fields/ReporterName__c.field-meta.xml
<CustomField>
    <fullName>ReporterName__c</fullName>
    <description>Name of the user submitting the concern</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Reporter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>