force-app/main/default/objects/ReportConcern__c/fields/ReporterPhone__c.field-meta.xml
<CustomField>
    <fullName>ReporterPhone__c</fullName>
    <description>Phone of the user submitting the concern</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Reporter Phone</label>
    <type>Phone</type>
</CustomField>