force-app/main/default/objects/ReportConcern__c/fields/ResourceID__c.field-meta.xml
<CustomField>
    <fullName>ResourceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resource for which the change is suggested</description>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Report Concerns</relationshipLabel>
    <relationshipName>ResourceID</relationshipName>
    <type>Lookup</type>
</CustomField>