force-app/main/default/objects/ReportConcern__c/recordTypes/Concern.recordType-meta.xml
<RecordType>
    <fullName>Concern</fullName>
    <active>true</active>
    <label>Concern</label>
</RecordType>