force-app/main/default/objects/ReportConcern__c/listViews/ClaimSiteQueue_ReportConcern.listView-meta.xml
<ListView>
    <fullName>ClaimSiteQueue_ReportConcern</fullName>
    <filterScope>Queue</filterScope>
    <label>State User Queue</label>
    <queue>ClaimSiteQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>